Sutter Health/src/objects/Incumbent_Carrier__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive_n__c</fullName>
        <formula>Opportunity__r.Account.Account_Executive__r.FirstName  &amp; &apos; &apos; &amp;  Opportunity__r.Account.Account_Executive__r.LastName</formula>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RecordType_Name__c</fullName>
        <formula>Opportunity__r.Account_RecordType_Name__c</formula>
        <label>Account RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>Opportunity__r.Account_Status__c</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOR__c</fullName>
        <formula>Opportunity__r.Broker_of_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <formula>Opportunity__r.Broker_Rep1__r.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Broker_Rep1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerageFirm_n__c</fullName>
        <formula>Opportunity__r.Broker1__r.Name</formula>
        <label>Brokerage Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Firm__c</fullName>
        <label>Brokerage Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>% Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>Opportunity__r.Commission__c</formula>
        <label>Commission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution_s_EE__c</fullName>
        <formula>Opportunity__r.Contribution_s_EE__c</formula>
        <label>Contribution(s) - EE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Plan__c</fullName>
        <label>Custom Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA_if_any_n__c</fullName>
        <formula>IF(Opportunity__r.Account.DBA__c != NULL &amp;&amp; Opportunity__r.Account.DBA__c != &apos;&apos;,Opportunity__r.Account.DBA__c,&apos;N/A&apos;)</formula>
        <label>DBA (if any)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOV__c</fullName>
        <label>DOV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <formula>Opportunity__r.Dependent_Contribution__c</formula>
        <label>Dependent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECH_Renewal__c</fullName>
        <label>Renewal Tier 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECH__c</fullName>
        <label>Current Tier 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Renewal__c</fullName>
        <label>Renewal Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <label>Current Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Renewal__c</fullName>
        <label>Renewal Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE__c</fullName>
        <label>Current Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Renewal__c</fullName>
        <label>Renewal Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF__c</fullName>
        <label>Current Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_City_n__c</fullName>
        <formula>Opportunity__r.Account.BillingCity</formula>
        <label>ER City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Zip_Code_n__c</fullName>
        <formula>Opportunity__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ER Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER__c</fullName>
        <label>ER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Renewal__c</fullName>
        <label>Renewal Tier 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES__c</fullName>
        <label>Current Tier 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Employer_Type__c</fullName>
        <formula>IF(TEXT(Opportunity__r.Account.Employer_Type__c) != NULL &amp;&amp; TEXT(Opportunity__r.Account.Employer_Type__c) != &apos;&apos;,TEXT(Opportunity__r.Account.Employer_Type__c),&apos;N/A&apos;)</formula>
        <label>Email Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name_n__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <formula>Opportunity__r.Employer_Type__c</formula>
        <label>Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Commission__c</fullName>
        <formula>Opportunity__r.GA_Commission__c</formula>
        <label>GA Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GA_Contact__c</fullName>
        <formula>Opportunity__r.GA_Contact__r.FirstName  &amp; &apos; &apos; &amp;  Opportunity__r.GA_Contact__r.LastName</formula>
        <label>GA Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Agent_Applicable__c</fullName>
        <formula>Opportunity__r.General_Agent_Applicable__c</formula>
        <label>General Agent Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Agent__c</fullName>
        <formula>Opportunity__r.General_Agent__r.Name</formula>
        <label>General Agent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Rnwl_Date__c</fullName>
        <formula>Opportunity__r.Group_Renewal_Date__c</formula>
        <label>Group Rnwl Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Carrier__c</fullName>
        <description>Req 3389</description>
        <label>Incumbent Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AETNA</fullName>
                </value>
                <value>
                    <fullName>ANTHEM</fullName>
                </value>
                <value>
                    <fullName>BLUE SHIELD</fullName>
                </value>
                <value>
                    <fullName>CAL CHOICE</fullName>
                </value>
                <value>
                    <fullName>CALPERS</fullName>
                </value>
                <value>
                    <fullName>CHINESE COMMUNITY HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>HEALTH NET</fullName>
                </value>
                <value>
                    <fullName>SELF FUNDED</fullName>
                </value>
                <value>
                    <fullName>UNITED</fullName>
                </value>
                <value>
                    <fullName>WHA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>KAISER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Child_Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Record Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Quotes_Requested__c</fullName>
        <label># of Quotes Requested</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOPM__c</fullName>
        <label>OOPM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFP Form/Incumbent Carriers</relationshipLabel>
        <relationshipName>Incumbent_Carriers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Carrier__c</fullName>
        <label>Other Competitive Carrier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Area_EE_s_n__c</fullName>
        <formula>Opportunity__r.Out_of_Area_EEs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Area EE s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <label>Participation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <formula>Opportunity__r.Plan_Year__c</formula>
        <label>Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Due_Date_n__c</fullName>
        <formula>Opportunity__r.RFP_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Effective_Date_n__c</fullName>
        <formula>Opportunity__r.Plan_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFR - Status Quo</fullName>
                </value>
                <value>
                    <fullName>RFR - Change Renewal</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RX__c</fullName>
        <label>RX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Tier__c</fullName>
        <formula>Opportunity__r.Rate_Tier__c</formula>
        <label>Rate Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratioes_To_Quote__c</fullName>
        <label>Ratioes To Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Market_Check__c</fullName>
        <defaultValue>&quot;Renewal&quot;</defaultValue>
        <label>Reason for Market Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete Census</fullName>
                </value>
                <value>
                    <fullName>Current Carrier Rates in Question</fullName>
                </value>
                <value>
                    <fullName>Quote Strategy Needed</fullName>
                </value>
                <value>
                    <fullName>Current Rates/Plans Do Not Match Census</fullName>
                </value>
                <value>
                    <fullName>Current Carrier Claims Data Missing</fullName>
                </value>
                <value>
                    <fullName>Requires Management and/or Compliance Approval to Quote</fullName>
                </value>
                <value>
                    <fullName>Requires Group Attestation Form to Quote</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewed_RFP_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewed RFP Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHP_Participation__c</fullName>
        <formula>Opportunity__r.SHP_SA_Subs_minus_Valid_Waiver__c</formula>
        <label>SHP Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHP_Plan_to_Quote__c</fullName>
        <label>SHP Plan to Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Plans_to_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SHP Plans to Quote</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Benefit_Plan_Metadata__c.Benefit_Grid__r.Market_Segment__c</field>
                <operation>equals</operation>
                <value>Large Group</value>
            </filterItems>
            <filterItems>
                <field>Benefit_Plan_Metadata__c.IsCustom__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Benefit_Plan_Metadata__c</referenceTo>
        <relationshipLabel>RFP Form/Incumbent Carriers</relationshipLabel>
        <relationshipName>RFP_Form_Incumbent_Carriers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHP_SA_Subs_minus_Valid_Waiver__c</fullName>
        <formula>Opportunity__r.SHP_SA_Subs_minus_Valid_Waiver__c</formula>
        <label>SHP SA Subs minus Valid Waiver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHP_vs_Renewal__c</fullName>
        <label>SHP vs Renewal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <formula>Opportunity__r.Account.SIC_Code__c</formula>
        <label>SIC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slicing_with_Carrier_Name__c</fullName>
        <formula>Opportunity__r.Slicing_with_Carrier_Name__c</formula>
        <label>Slicing with Carrier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instuctions__c</fullName>
        <label>Special Instuctions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specialist_OV__c</fullName>
        <label>Specialist OV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted to Underwriting</fullName>
                </value>
                <value>
                    <fullName>Approved by Underwriting</fullName>
                </value>
                <value>
                    <fullName>Rejected by Underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Broker__c</fullName>
        <formula>Opportunity__r.Strategic_Broker__c</formula>
        <label>Strategic Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Statement__c</fullName>
        <label>Strategy Statement</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_Dual_Triple_Slice__c</fullName>
        <label>Proposal Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Triple Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_R_or_Slice_n__c</fullName>
        <formula>TEXT(Opportunity__r.Additional_Buy_Ups__c)</formula>
        <label>Proposal Scenario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Account_Id__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <label>Tech Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiered_Rates__c</fullName>
        <label>Tiered Rates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_EE_s_n__c</fullName>
        <formula>Opportunity__r.Full_Time_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total EE&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Enrolled_n__c</fullName>
        <formula>Opportunity__r.Full_Time_Employees__c - Opportunity__r.Out_of_Area__c - Opportunity__r.Waived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SHP_SA_Subs_with_Valid_Waivers__c</fullName>
        <formula>Opportunity__r.Total_SHP_SA_Subs_with_Valid_Waivers__c</formula>
        <label>Total SHP SA Subs with Valid Waivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Subs_in_SHP_Service_Areas_SA__c</fullName>
        <formula>Opportunity__r.Total_Subs_in_SHP_Service_Areas_SA__c</formula>
        <label>Total Subs in SHP Service Areas (SA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Waivers_n__c</fullName>
        <formula>Opportunity__r.Waived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Waivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Enrolled__c</fullName>
        <label># of Enrolled</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RFP Form/Incumbent Carrier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Incumbent_Carrier__c</columns>
        <columns>Stage__c</columns>
        <columns>of_Enrolled__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Incumbent_Carrier__c.RFP_Form</value>
        </filters>
        <filters>
            <field>Reject_Reason__c</field>
            <operation>notEqual</operation>
            <value>Void</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Queue</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Incumbent_Carrier__c</columns>
        <columns>Stage__c</columns>
        <columns>of_Enrolled__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Incumbent_Carrier__c.RFP_Form</value>
        </filters>
        <filters>
            <field>Reject_Reason__c</field>
            <operation>notEqual</operation>
            <value>Void</value>
        </filters>
        <label>My Queue</label>
    </listViews>
    <listViews>
        <fullName>SHP_Sales_Queue_Incumbent_Carrier</fullName>
        <columns>NAME</columns>
        <columns>Employer_Name_n__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Incumbent_Carrier__c</columns>
        <columns>Stage__c</columns>
        <columns>of_Enrolled__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Incumbent_Carrier__c.RFP_Form</value>
        </filters>
        <label>SHP Sales Queue</label>
        <queue>SHP_Sales_Queue</queue>
        <sharedTo>
            <group>SHP_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Underwriter_Queue_Incumbent_Carrier</fullName>
        <columns>NAME</columns>
        <columns>Employer_Name_n__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Incumbent_Carrier__c</columns>
        <columns>Stage__c</columns>
        <columns>of_Enrolled__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Incumbent_Carrier__c.RFP_Form</value>
        </filters>
        <label>SHP Underwriter Queue</label>
        <queue>SHP_Underwriter_Queue</queue>
        <sharedTo>
            <group>Underwriter</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Void_Queue_Incumbent_Carrier</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Incumbent_Carrier__c</columns>
        <columns>Stage__c</columns>
        <columns>of_Enrolled__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Void Queue</label>
        <queue>SHP_Void_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>Incumbent Carrier No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Form/Incumbent Carriers</pluralLabel>
    <recordTypes>
        <fullName>Incumbent_Carrier</fullName>
        <active>true</active>
        <label>Incumbent Carrier</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP_Form</fullName>
        <active>true</active>
        <description>Recordtype to diffrenatiate RFP form records from Incumbent Carrier records</description>
        <label>RFP Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Current_Tier_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>EC__c = &apos;0&apos;</errorConditionFormula>
        <errorDisplayField>EC__c</errorDisplayField>
        <errorMessage>Cannot set the value on the this field as 0</errorMessage>
    </validationRules>
</CustomObject>